--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -42,4 +42,5 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/caching-proxy:latest
 
       - name: ✅ Image pushed successfully
-        run: echo "✅ Docker image pushed to DockerHub: https://hub.docker.com/r/${{ secrets.DOCKER_USERNAME }}/caching-proxy"
+        run: echo '✅ Docker image pushed to DockerHub: https://hub.docker.com/r/${{ secrets.DOCKER_USERNAME }}/caching-proxy'
+
